fix text alignment and letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,15 @@ body {
 }
 .heading-primary-main {
   display: block;
-  font-size: 60px;
+  font-size: 80px;
   font-weight: 400;
   letter-spacing: 35px;
+  text-align: center;
 }
 .heading-primary-sub {
   display: block;
   font-size: 20px;
   font-weight: 400;
-  letter-spacing: 17.4px;
+  letter-spacing: 12px;
+  text-align: center;
 }
